vlib/v/checker/tests/sum_type_ref_variant_err.out
vlib/v/checker/tests/sum_type_ref_variant_err.vv:7:33: error: sum type cannot hold a reference type,
declare it with non-reference types and use a reference to the sum type instead: `foo := &Alphabet1(bar)`
    5 |     foo string
    6 | }
    7 | type Alphabet1 = Abc | string | &Xyz
      |                                 ~~~~
    8 | type Alphabet2 = Abc | &Xyz | string
    9 | type Alphabet3 = &Xyz | Abc | string
vlib/v/checker/tests/sum_type_ref_variant_err.vv:8:24: error: sum type cannot hold a reference type,
declare it with non-reference types and use a reference to the sum type instead: `foo := &Alphabet2(bar)`
    6 | }
    7 | type Alphabet1 = Abc | string | &Xyz
    8 | type Alphabet2 = Abc | &Xyz | string
      |                        ~~~~
    9 | type Alphabet3 = &Xyz | Abc | string
vlib/v/checker/tests/sum_type_ref_variant_err.vv:9:18: error: sum type cannot hold a reference type,
declare it with non-reference types and use a reference to the sum type instead: `foo := &Alphabet3(bar)`
    7 | type Alphabet1 = Abc | string | &Xyz
    8 | type Alphabet2 = Abc | &Xyz | string
    9 | type Alphabet3 = &Xyz | Abc | string
      |                  ~~~~
